[package]
name = "blocks_world"
version = "0.4.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhop = {git = "https://github.com/gjf2a/anyhop"}
pddl_problem_parser = {git = "https://github.com/gjf2a/pddl_problem_parser"}